crates/biome_js_analyze/tests/specs/nursery/noPlaywrightForceOption/invalid/fill.js
/* should generate diagnostics */
await page.locator('input').fill('text', { force: true });


